--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# GitHub Webhook Configuration (for automated deployments)
+GITHUB_WEBHOOK_SECRET=
+GIT_REPO_PATH=
